# lehre-chemie-msr-notebooks

./: .gitignore  2Tank-Modellbildung.ipynb  2Tank-Reglerentwurf.ipynb  2Tank-Steuerungsentwurf.ipynb  BodeDiagramm.ipynb  Pipfile  PolkomensationSystem2Ordnung.ipynb  PolkompensationSystem2Ordnung.ipynb  README.rst  RegelungSystem1OrdnungSprungVsTrajektorie.ipynb  RegelungSystem2OrdnungSprungVsTrajektorie.ipynb  StabilitätPendel.ipynb  SteuerungSprungVsTrajektorie.ipynb  SteuerungVsRegelung.ipynb  VergleichEinstellverfahrenSystem2Ordnung.ipynb  pyproject.toml  requirements.txt
images/: Tupfile  tikzlibrarycircuits.pid.code.tex
pr/: 2Tank-Modellbildung.ipynb  2Tank-PID-Reglerentwurf.ipynb  2Tank-Reglerentwurf.ipynb  2Tank-Steuerungsentwurf.ipynb  2Tank-Zustandsregler.ipynb  2Tank-Zustandsreglerentwurf.ipynb  controller.py  feedforward.py  models.py  plotting.py  settingsV1.py  simulate.py
tikz/: .latexmkrc  data.tex  feedBackGenerator.tex  feedBackGenerator.tikz  feedForwardGenerator.tex  house.tikz  hvac.tex  hvac.tikz  pendulum.tikz  smith.tex  tankKaskade.tex  tikzImages.tex  twoTank.tikz
vl/allgemein/: SteuerungVsRegelung.ipynb
vl/prozess/: BodeDiagramm.ipynb  Parameteridentifikation.ipynb  StabilitätPendel.ipynb  messungHVAC.csv
vl/regelkreis/: Kaskadenregelung.ipynb  ReglerBeschraenkung.ipynb  SmithPraediktor.ipynb
vl/regler/: FlachheitsbasierteRegelungSystem2Ordnung.ipynb  LQRSystem2Ordnung.ipynb  PolkompensationSystem2Ordnung.ipynb  RegelungSystem1OrdnungSprungVsTrajektorie.ipynb  RegelungSystem2OrdnungSprungVsTrajektorie.ipynb  (+6 more)
