[project]
name = "notebooks"
version = "0.1.0"
description = "Lehre Notebooks"
readme = 'README.rst'
requires-python = '>=3.12'
dependencies = [
    "control>=0.10.1",
    "ipympl>=0.9.7",
    "ipywidgets>=8.1.7",
    "jupyter>=1.1.1",
    "jupyter-collaboration>=4.0.2",
    "matplotlib>=3.10.3",
    "nbstripout>=0.8.1",
    "numpy>=2.2.6",
    "pandas>=2.2.3",
    "scipy>=1.15.3",
    "sympy>=1.14.0",
]
